Fixed button width on smaller displays.

--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,11 @@ h1#title {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
-    width: 30%;
+    width: 90vw;
+    max-width: 500px;
     margin: 2rem auto;
 }
+
 
 #links a {
     display: block;
